[package]
authors = ["Philpax <me@philpax.me>", "Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"
name = "blog_os"
version = "0.1.0"

[[test]]
harness = false
name = "should_panic"

[[test]]
harness = false
name = "stack_overflow"

[dependencies]
bootloader = "0.10.12"
linked_list_allocator = "0.9.1"
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
spin = "0.9.3"
uart_16550 = "0.2.18"
volatile = "0.2.6"
x86_64 = "0.14.9"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[dependencies.crossbeam-queue]
default-features = false
features = ["alloc"]
version = "0.2.1"

[dependencies.conquer-once]
default-features = false
version = "0.2.0"

[dependencies.futures-util]
default-features = false
features = ["alloc"]
version = "0.3.4"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
] 
test-success-exit-code = 33 # (0x10 << 1) | 1
